--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-flatpickr-component": "8.1.2",
     "vue-material": "^0.8.1",
+    "vue-multiselect": "^2.1.6",
     "vue-openapi": "^0.10.0",
     "vue-resource": "^1.5.1",
     "vue-router": "3.0.1",
