--- a/app/pom.xml
+++ b/app/pom.xml
@@ -20,12 +20,32 @@
 	<properties>
 		<main.basedir>${project.basedir}</main.basedir>
 		<camel.version>2.25.1</camel.version>
+		<start-class>com.sloopsight.sandbox.app.Bootstrap</start-class>
 	</properties>
 
 
 
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.sloopsight.sandbox</groupId>
+			<artifactId>sandbox-ui</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-core</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.swagger.parser.v3/swagger-parser-v3 -->
 		<dependency>
 			<groupId>io.swagger.parser.v3</groupId>
@@ -81,6 +101,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.1.5.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.vladmihalcea/hibernate-types-52 -->
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.9.13</version>
 		</dependency>
 
 		<dependency>
@@ -162,8 +188,32 @@
 				</executions>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<spring.profiles.active>dev</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 
+			<properties>
+				<spring.profiles.active>prod</spring.profiles.active>
+			</properties>
+		</profile>
+	</profiles>
 </project>
