--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,20 +1,13 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/sandbox?useUnicode=true&characterEncoding=UTF-8&verifyServerCertificate=false&useSSL=false&noAccessToProcedureBodies=true
-spring.datasource.username= root
-spring.datasource.password= root
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL57InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
-
+spring.jpa.hibernate.ddl-auto=update
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
-
-
-
+spring.profiles.active=@spring.profiles.active@
 camel.component.servlet.mapping.context-path=/camel
 server.port=8081
+default.user=admin
+default.password={bcrypt}$2a$10$a.IFs6JVH5YiigBP2nju0.5ez/0305iO0H3wLpIAJaVSWLaIsrQxK
