--- a/web/pom.xml
+++ b/web/pom.xml
@@ -74,5 +74,10 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/dist</directory>
+			</resource>
+		</resources>
 	</build>
 </project>
