--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>sandbox-ui</artifactId>
 	<packaging>jar</packaging>
 
-	<name>spring-boot-vuejs</name>
+	<name>sandbox-ui</name>
 	<description>Webjar for sandbox ui</description>
 
 	<parent>
@@ -28,6 +28,22 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${project.basedir}/dist</directory>
+							<directory>${project.basedir}/target</directory>
+
+							<includes>
+								<include>**/*</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
