--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -8,6 +8,7 @@ bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
 spring.profiles.active=@spring.profiles.active@
 camel.component.servlet.mapping.context-path=/camel
+server.servlet.context-path=/app
 server.port=8081
 default.user=admin
 default.password={bcrypt}$2a$10$a.IFs6JVH5YiigBP2nju0.5ez/0305iO0H3wLpIAJaVSWLaIsrQxK
