--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@casl/ability": "^4.1.6",
+    "@casl/vue": "^1.1.1",
     "axios": "^0.19.2",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.0.0-rc.15",
@@ -22,11 +24,15 @@
     "vue-clipboard2": "0.3.0",
     "vue-codemirror": "^4.0.6",
     "vue-flatpickr-component": "8.1.2",
+    "vue-loading-overlay": "^3.3.4",
     "vue-material": "^0.8.1",
     "vue-multiselect": "^2.1.6",
     "vue-openapi": "^0.10.0",
+    "vue-pnotify": "^1.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "3.0.1",
+    "vue-select": "^3.10.8",
+    "vue-sweetalert2": "^4.0.0",
     "vue2-transitions": "0.3.0",
     "vuejs-logger": "1.5.4",
     "vuex": "^3.5.1",
