--- a/app/pom.xml
+++ b/app/pom.xml
@@ -27,11 +27,20 @@
 
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.directory.api/api-util -->
+		<!-- https://mvnrepository.com/artifact/org.apache.directory.api/api-ldap-model -->
+		<dependency>
+			<groupId>org.apache.directory.api</groupId>
+			<artifactId>api-ldap-model</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
- 		</dependency>
+		</dependency>
 		<dependency>
 			<groupId>com.sloopsight.sandbox</groupId>
 			<artifactId>sandbox-ui</artifactId>
