--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,9 +23,9 @@
 		<java.version>1.8</java.version>
 		<maven-check-style-version>3.1.0</maven-check-style-version>
 		<scm.connection.url>https://${GIT_USER}:${GIT_PASSWORD}@github.com/sloopsight-com/sandbox.git</scm.connection.url>
-		<releaseRepoUrl>https://oss.sonatype.org/content/repositories/snapshots/</releaseRepoUrl>
+		<releaseRepoUrl>https://repo1.maven.org/maven2/</releaseRepoUrl>
 		<releaseRepoId>release-repo</releaseRepoId>
-		<snapshotRepoUrl>https://repo1.maven.org/maven2/</snapshotRepoUrl>
+		<snapshotRepoUrl>https://oss.sonatype.org/content/repositories/snapshots/</snapshotRepoUrl>
 		<snapshotRepoId>snapshot-repo</snapshotRepoId>
 
 	</properties>
