--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -104,12 +104,12 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>snapshot-repo</id>
+			<id>nexus-repo</id>
 			<name>Snapshots Repo</name>
 			<url>${snapshotRepoUrl}</url>
 		</snapshotRepository>
 		<repository>
-			<id>release-repo</id>
+			<id>nexus-repo</id>
 			<name>Releases Repo</name>
 			<url>${releaseRepoUrl}</url>
 		</repository>
