--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
 		<java.version>1.8</java.version>
 		<maven-check-style-version>3.1.0</maven-check-style-version>
 		<scm.connection.url>https://${GIT_USER}:${GIT_PASSWORD}@github.com/sloopsight-com/sandbox.git</scm.connection.url>
-		<releaseRepoUrl>https://repo1.maven.org/maven2/</releaseRepoUrl>
+		<releaseRepoUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</releaseRepoUrl>
 		<releaseRepoId>release-repo</releaseRepoId>
 		<snapshotRepoUrl>https://oss.sonatype.org/content/repositories/snapshots/</snapshotRepoUrl>
 		<snapshotRepoId>snapshot-repo</snapshotRepoId>
@@ -101,6 +101,11 @@
 		<module>../web</module>
 		<module>../app</module>
 	</modules>
+	<scm>
+		<connection>scm:git:${scm.connection.url}</connection>
+		<developerConnection>scm:git:${scm.connection.url}</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 
 	<distributionManagement>
 		<snapshotRepository>
