--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-check-style-version>3.1.0</maven-check-style-version>
-		<scm.connection.url>https://${GIT_USER}:${GIT_PASSWORD}@github.com/sloopsight-com/sandbox.git</scm.connection.url>
+		<scm.connection.url>https://github.com/sloopsight-com/sandbox.git</scm.connection.url>
 		<releaseRepoUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</releaseRepoUrl>
 		<releaseRepoId>release-repo</releaseRepoId>
 		<snapshotRepoUrl>https://oss.sonatype.org/content/repositories/snapshots/</snapshotRepoUrl>
