--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -98,7 +98,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<tagNameFormat>PR-@{project.version}</tagNameFormat>
+					<tagNameFormat>JPR-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release</releaseProfiles>
 				</configuration>
