--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -98,7 +98,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<tagNameFormat>JPR-@{project.version}</tagNameFormat>
+					<tagNameFormat>KPR-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release</releaseProfiles>
 				</configuration>
@@ -111,6 +111,7 @@
 		<module>../app</module>
 	</modules>
 	<scm>
+	        <url>${GIT_URL}</url>
 		<connection>scm:git:${GIT_URL}</connection>
 		<developerConnection>scm:git:${GIT_URL}</developerConnection>
 		<tag>HEAD</tag>
