--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -96,9 +96,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>2.5.3</version>
 				<configuration>
-					<tagNameFormat>KPR-@{project.version}</tagNameFormat>
+					<tagNameFormat>LPR-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release</releaseProfiles>
 				</configuration>
