--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -113,7 +113,7 @@
 	<scm>
 		<url>${GIT_URL}</url>
 		<connection>scm:git:${GIT_URL}</connection>
-		<developerConnection>scm:git:[fetch=]${GIT_URL}[push=]${GIT_URL}=</developerConnection>
+		<developerConnection>scm:git:[fetch=]${GIT_URL}[push=]${GIT_URL}</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
