--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -98,7 +98,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<tagNameFormat>OPR-@{project.version}</tagNameFormat>
+					<tagNameFormat>NPR1-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release</releaseProfiles>
 				</configuration>
@@ -111,9 +111,9 @@
 		<module>../app</module>
 	</modules>
 	<scm>
-		<url>git@github.com:sloopsight-com/sandbox.git</url>
-		<connection>scm:git:git@github.com:sloopsight-com/sandbox.git</connection>
-		<developerConnection>scm:git:git@github.com:sloopsight-com/sandbox.git</developerConnection>
+		<url>${GIT_URL}</url>
+		<connection>scm:git:ssh://github.com/sloopsight-com/sandbox.git</connection>
+		<developerConnection>scm:git:ssh://github.com/sloopsight-com/sandbox.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
