--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,7 +26,7 @@
 		<releaseRepoId>release-repo</releaseRepoId>
 		<snapshotRepoUrl>https://oss.sonatype.org/content/repositories/snapshots/</snapshotRepoUrl>
 		<snapshotRepoId>snapshot-repo</snapshotRepoId>
-
+		<scm.user>git@</scm.user>
 	</properties>
 
 	<build>
@@ -112,8 +112,8 @@
 	</modules>
 	<scm>
 		<url>${GIT_URL}</url>
-		<connection><![CDATA[scm:git:ssh://git@github.com/sloopsight-com/sandbox.git]]></connection>
-		<developerConnection><![CDATA[scm:git:ssh://git@github.com/sloopsight-com/sandbox.git]]></developerConnection>
+		<connection>scm:git:ssh:/${scm.user}github.com/sloopsight-com/sandbox.git</connection>
+		<developerConnection>scm:git:ssh://${scm.user}github.com/sloopsight-com/sandbox.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
