--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,15 @@
 		<snapshotRepoId>snapshot-repo</snapshotRepoId>
 		<github.user>git@</github.user>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<version>	2.5.3</version>
 
+
+		</dependency>
+	</dependencies>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -96,7 +104,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>	2.5.3</version>
 				<configuration>
 					<tagNameFormat>NPR1-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
