--- a/parent/release.properties
+++ b/parent/release.properties
@@ -1,12 +1,25 @@
 #release configuration
-#Sat Nov 07 00:38:10 IST 2020
-scm.tagNameFormat=NPR1-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:ssh\://git@github.com/sloopsight-com/sandbox.git
-preparationGoals=clean verify
-remoteTagging=true
-projectVersionPolicyId=default
+#Sat Nov 07 00:38:56 IST 2020
 scm.commentPrefix=[maven-release-plugin] 
+project.rel.com.sloopsight.sandbox\:sandbox-parent=0.0.1
+project.rel.com.sloopsight.sandbox\:sandbox-app=0.0.1
+pushChanges=true
+project.scm.com.sloopsight.sandbox\:sandbox-ui.empty=true
+project.scm.com.sloopsight.sandbox\:sandbox-parent.tag=HEAD
+project.rel.com.sloopsight.sandbox\:sandbox-ui=0.0.1
+scm.tag=test
+remoteTagging=true
 exec.additionalArguments=-DskipTests\=$SKIP_TEST -P nexus
+projectVersionPolicyId=default
+project.scm.com.sloopsight.sandbox\:sandbox-parent.url=${GIT_URL}
+project.scm.com.sloopsight.sandbox\:sandbox-parent.connection=scm\:git\:ssh\://git@github.com/sloopsight-com/sandbox.git
+project.scm.com.sloopsight.sandbox\:sandbox-app.empty=true
+scm.url=scm\:git\:ssh\://git@github.com/sloopsight-com/sandbox.git
+scm.tagNameFormat=NPR1-@{project.version}
+preparationGoals=clean verify
+project.dev.com.sloopsight.sandbox\:sandbox-parent=0.0.2-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.scm.com.sloopsight.sandbox\:sandbox-parent.developerConnection=scm\:git\:ssh\://git@github.com/sloopsight-com/sandbox.git
+project.dev.com.sloopsight.sandbox\:sandbox-app=0.0.2-SNAPSHOT
+project.dev.com.sloopsight.sandbox\:sandbox-ui=0.0.2-SNAPSHOT
+completedPhase=generate-release-poms
