--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.sloopsight.sandbox</groupId>
 	<artifactId>sandbox-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 
 	<name>sandbox</name>
@@ -120,7 +120,7 @@
 		<url>${GIT_URL}</url>
 		<connection>scm:git:https://github.com/sloopsight-com/sandbox.git</connection>
 		<developerConnection>scm:git:https://github.com/sloopsight-com/sandbox.git</developerConnection>
-		<tag>test</tag>
+		<tag>NPR1-0.0.1</tag>
 	</scm>
 
 	<distributionManagement>
