--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,8 +11,8 @@
 	<parent>
 		<groupId>com.sloopsight.sandbox</groupId>
 		<artifactId>sandbox-parent</artifactId>
-		<version>0.0.1</version>
-		<relativePath>../parent/pom.xml</relativePath>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<properties>
