--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,7 @@
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-release-plugin</artifactId>
-			<version>	2.5.3</version>
-
-
+			<version>2.5.3</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -115,14 +113,14 @@
 	</build>
 
 	<modules>
-		<module>../web</module>
-		<module>../app</module>
+		<module>web</module>
+		<module>app</module>
 	</modules>
 	<scm>
 		<url>${GIT_URL}</url>
-		<connection>scm:git:ssh://git@github.com/sloopsight-com/sandbox.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/sloopsight-com/sandbox.git</developerConnection>
-		<tag>HEAD</tag>
+		<connection>scm:git:https://github.com/sloopsight-com/sandbox.git</connection>
+		<developerConnection>scm:git:https://github.com/sloopsight-com/sandbox.git</developerConnection>
+		<tag>NPR1-0.0.1</tag>
 	</scm>
 
 	<distributionManagement>
