--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>	2.5.3</version>
 				<configuration>
-					<tagNameFormat>NPR1-@{project.version}</tagNameFormat>
+					<tagNameFormat>TPR2-@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release</releaseProfiles>
 				</configuration>
@@ -120,8 +120,7 @@
 		<url>${GIT_URL}</url>
 		<connection>scm:git:https://github.com/sloopsight-com/sandbox.git</connection>
 		<developerConnection>scm:git:https://github.com/sloopsight-com/sandbox.git</developerConnection>
-		<tag>NPR1-0.0.1</tag>
-	</scm>
+ 	</scm>
 
 	<distributionManagement>
 		<snapshotRepository>
