--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.sloopsight.sandbox</groupId>
 		<artifactId>sandbox-parent</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
