--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.sloopsight.sandbox</groupId>
 	<artifactId>sandbox-parent</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>sandbox</name>
@@ -118,7 +118,7 @@
 		<url>${GIT_URL}</url>
 		<connection>scm:git:https://github.com/sloopsight-com/sandbox.git</connection>
 		<developerConnection>scm:git:https://github.com/sloopsight-com/sandbox.git</developerConnection>
-     <tag>TQR2-0.0.2</tag>
+     <tag>HEAD</tag>
   </scm>
 
 	<distributionManagement>
