--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "core-js": "2.6.5",
     "flatpickr": "4.5.7",
     "nouislider": "13.1.4",
+    "swagger-ui-dist": "^3.37.0",
     "vue": "2.6.6",
     "vue-chartjs": "3.4.2",
     "vue-clipboard2": "0.3.0",
@@ -26,7 +27,6 @@
     "vue-loading-overlay": "^3.3.4",
     "vue-material": "^0.8.1",
     "vue-multiselect": "^2.1.6",
-    "vue-openapi": "^0.10.0",
     "vue-pnotify": "^1.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "3.0.1",
