--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>sandbox-app</artifactId>
@@ -25,6 +27,14 @@
 
 
 	<dependencies>
+
+
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+			<groupId>org.javadelight</groupId>
+			<artifactId>delight-fileupload</artifactId>
+			<version>0.0.3</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.directory.api/api-util -->
 		<!-- https://mvnrepository.com/artifact/org.apache.directory.api/api-ldap-model -->
