--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,13 @@
     "monaco-editor-webpack-plugin": "^1.9.1",
     "nouislider": "13.1.4",
     "swagger-ui-dist": "^3.37.0",
+    "v-jsoneditor": "^1.4.4",
     "vue": "2.6.6",
     "vue-chartjs": "3.4.2",
     "vue-clipboard2": "0.3.0",
     "vue-codemirror": "^4.0.6",
     "vue-flatpickr-component": "8.1.2",
+    "vue-json-edit": "^1.4.3",
     "vue-loading-overlay": "^3.3.4",
     "vue-material": "^0.8.1",
     "vue-multiselect": "^2.1.6",
